--- a/snap.manifest.json
+++ b/snap.manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.7.0",
+  "version": "1.0.0",
   "proposedName": "MetaMask Template Snap",
   "description": "A MetaMask Snap template.",
   "repository": {
@@ -7,12 +7,12 @@
     "url": "https://github.com/MetaMask/snap-template.git"
   },
   "source": {
-    "shasum": "LhEqByV5KI5viE/gDzB2lP9+piC4jrwaqZ/kMo2WYgc=",
+    "shasum": "YCORWXETTnrf+2xdSC1mCXZiJfHnpa13HDoV6OwpldI=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
         "iconPath": "images/icon.svg",
-        "packageName": "@metamask/template-snap",
+        "packageName": "jackson-first-metamask-snap",
         "registry": "https://registry.npmjs.org/"
       }
     }
